--- a/index.html
+++ b/index.html
@@ -41,24 +41,21 @@
 
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="import" href="/src/my-dapp.html">
-
     <style>
 
       body {
-        font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+        font-family: 'Nunito', sans-serif;
         letter-spacing: 0;
-        font-weight: 400;
+        font-weight: 300;
         font-style: normal;
         text-rendering: optimizeLegibility;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         -moz-font-feature-settings: "liga" on;
-        color: rgba(0,0,0,.8);
         font-size: 18px;
         line-height: 1.4;
         margin: 0;
         min-height: 100vh;
-        background-color: #7f1c51;
         overflow: hidden;
       }
     </style>
