--- a/src/my-warning.html
+++ b/src/my-warning.html
@@ -11,57 +11,36 @@
         display: block;
         padding: 0px;
         height: 100vh;
-        @apply(--layout-horizontal);
-        @apply(--layout-center);
-      }
-      .container{
-        @apply(--layout-flex);
-        @apply(--layout-horizontal);
-        @apply(--layout-center-justified);
+        @apply(--layout-vertical);
       }
       .warning{
-        @apply(--layout-vertical);
-        max-width: 414px;
-        padding-bottom: 50px;
+        padding: 18px;
+        width: calc(100% -18px);
+        background-image: url('/assets/skull.svg');
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
       }
-      .warning p {
-        @apply(--info-box);
-      }
-      .warning :nth-child(1){
-        width: 145px;
-      }
-      .warning :nth-child(2){
-        color: var(--light-pink-color)
-      }
-      .button {
-        display: block;
-        width: 100%;
-        height: 70px;
+      .warning-text{
+        font-size: 11px;
+        padding: 18px;
+        width: calc(100% -18px);
         text-align: center;
-        position: fixed;
-        bottom: 18px;
-        left: 0px;
-      }
-      .warning img{
-        width: 120px;
-        margin: 0 auto;
-        cursor: pointer;
+        color: var( --white-color);
+        font-size: 14px
       }
 
     </style>
 
     <app-location route="{{route}}"></app-location>
     
-    <div class="container">
-        <div class="warning">
-            <img src="/assets/skull.svg">
-            <p>Your backup phrase will be displayed on the next page, ensure you are in private.</p>
-            <p>Anyone who knows your backup phrase has full access to your account!</p>
-        </div>
-        <a href="/phrase/" class="button">
-          <img src="/assets/buttons/got-it.svg" >
-        </a>
+    <div class="title">Warning!</div>
+    <div class="warning spacer"></div>
+    <div class="warning-text">
+        <p>Your backup phrase will be displayed on the next page, ensure you are in private. Anyone who knows your backup phrase has full access to your account!</p>
     </div>
+    <div class="button" on-click="_save">I Understand</div> 
+
+
 
   </template>
 
@@ -79,14 +58,15 @@
         };
       }
 
-
       connectedCallback(){
         super.connectedCallback();
         if(!this.confirmedPassword){
           this.set('route.path', 'login/warning/');
         }
       }
-
+      _save(){
+        this.set('route.path', 'phrase'); 
+      }
 
     } window.customElements.define(MyWarning.is, MyWarning);
   </script>
